refactor: 重构项目模块与代码结构